--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <label style="font-size:20px;"><input type="radio" value="option1" name="type">Day Scholar</label>&nbsp;&nbsp;
     <label style="font-size:20px;"><input type="radio" value="option2" name="type">Hosteller</label><br><br>
 &nbsp;&nbsp;<u>page 1 of 2</u><br><br>
-<a href="D:\projects\HTML\application2.html" id="position">Next</a>
+<a href="D:\pro\application2.html" id="position">Next</a>
 <img id="arrow" src='C:\Users\ELCOT\Downloads\arrow_img.png' width="100" height="50">
 </body>
 </html>
