--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<h3>(basic details)</h3>
     </center>
 
-    <img id="myimage" src='D:\Photos\backgrounds\PicsArt_07-03-09.52.02.png' width="700" height="1000">
+    <img id="myimage" src='PicsArt_07-03-09.52.02.png' width="700" height="1000">
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<label style="font-size:20px;">Name</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <input type="text" size="30" placeholder="IN ALPHABETS"><br><br>
     
